=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.23_01-dev

fix core dump triggered by <Perl>do 'foo.pl'</Perl>,
thanks to Robert S. Thau for the spot

pass $Config{ccflags} to apache for 5.6.0+

fix Apache->httpd_conf, thanks to Will Trillich for the spot

fixed 'make clean' to remove FILES => passed to MakeMaker

=item 1.23 - April 20, 2000

create test files during Makefile.PL so 'make test' can be run as root

add Apache::FILENO method for 5.6.0+ tied filehandle support
thanks to Richard Titmuss for the spot

--disable-rule=EXPAT is passed to Apache's configure to avoid
XML::Parser conflicts

User/Group for 'make test' can be overridden with the environment
variables APACHE_USER/APACHE_GROUP

fix PerlSetVar inheritance bug
[Sander van Zoest <sander@vanzoest.com>]

set r->notes("error-notes") to $@ if $@ after a Perl*Handlers is run
[Doug / Tom Mornini <tmornini@infomania.com>]

added INSTALL.raven
[Adam Qualset <adam@covalent.net>]

$c->remote_ip($ip) now also sets conn->remote_addr to make
IP-based access control work correctly
[Eric Cholet <cholet@logilune.com>]

Apache::URI::port wasn't setting the port correctly, thanks
to Zeqing Xia for the spot [Eric Cholet <cholet@logilune.com>]

$Apache::Registry::NameWithVirtualHost fix take 2
(move is_virtual logic from mod_perl.c to Registry.pm)
[John Hughes <john@Calva.COM>]

added Apache::OPEN method for 5.6.0+ tied filehandle support

Apache::Table is now loaded by default (if enabled), rather than
autoloading when first needed

$r->document_root can now be modified

upgrade license to apache software license version 1.1

$r->the_request can now be modified

modules/request test fix
[Rick Myers <rik@sumthin.nu>]

updated dso+aix Perl patch
[Jens-Uwe Mager <jum@helios.de>]

warn that dso+Perl malloc needs a Perl built with -Ubincompat5005

add Apache::BINMODE stub for 5.6.0 tied filehandle support (fixes cgi.t #4)